bk_ida/gccida/g2/combine_stack_adjustments
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_stack_adjustments/src/regmove.c:2654:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)v5->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_stack_adjustments/src/regmove.c:2655:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)v5[1]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_stack_adjustments/src/regmove.c:2734:26: error: use of undeclared identifier 'machine_mode'
if ( memory_address_p( ( machine_mode)*( ( unsigned __int8 *)memref + 2), global_rtl[2]) ) 
                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/combine_stack_adjustments/src/obj/regmove.o] Error 1
